--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,95 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+$main-theme-color: "#673ab7";
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-image: linear-gradient(90deg, #efefef, #ffffff, #efefef);
+}
+
+main {
+  max-width: 1190px;
+  width: 80%;
+  margin: 20px auto 40px;
+}
+
+*:focus {
+  outline: 0;
+}
+
+.new-offer-form {
+  display: grid;
+  grid-template: auto / 1fr 1fr;
+  grid-gap: 1em 2em;
+
+  .full-width-field {
+    grid-column: 1 / 3;
+  }
+
+  .clear-form-btn {
+    align-self: center;
+    justify-self: end;
+  }
+
+  textarea {
+    min-height: 100px;
+    overflow: hidden !important;
+  }
+}
+
+.dialog-content {
+  text-align: center;
+
+  h1 {
+    text-align: center;
+  }
+
+  .mat-dialog-content {
+    overflow: visible;
+    flex-direction: column;
+  }
+
+  mat-form-field,
+  .full-width-action-buttons,
+  .auth-social-media {
+    display: flex;
+    width: 80%;
+    max-width: 450px;
+    margin: 1em auto 0;
+  }
+
+  mat-form-field {
+    flex-direction: column;
+  }
+
+  .full-width-action-buttons {
+    flex-direction: column;
+
+    button {
+      width: 100%;
+    }
+
+    button:not(:last-child) {
+      margin-bottom: .75em;
+    }
+  }
+
+  .auth-social-media {
+    button {
+      flex: 0 49%;
+      min-width: 210px;
+      height: 48px;
+
+      img {
+        width: 32px;
+      }
+    }
+  }
+
+}
