--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -29,39 +29,8 @@
   flex-wrap: wrap;
   justify-content: space-between;
 
-  mat-card {
+  app-offer-card {
     display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    min-width: 210px;
-    margin-bottom: 1.25em;
-    box-sizing: border-box;
-
-    mat-card-header img {
-      max-width: 40px;
-      max-height: 40px;
-      border-radius: 50%;
-    }
-
-    mat-card-actions {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
-
-      span {
-        font-size: 12px;
-        color: rgba(0,0,0,.54);
-      }
-    }
-  }
-}
-
-.new-offers-block {
-
-  margin-top: 2em;
-
-  mat-card {
-    margin: 1.25em 0;
   }
 }
 
