load offers by chuncks & bugs fixed

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -52,7 +52,7 @@
         <app-offer-card *ngFor="let offer of (filteredOffers$ ? filteredOffers$ : popularOffers$) | async"
                         [offer]="offer" [style.flex-basis]="isGridLayout ? '49%' : '100%'"></app-offer-card>
     </div>
-    <button mat-raised-button color="primary">Больше офферов</button>
+    <button mat-raised-button color="primary" (click)="loadNextOffersChunk()">Больше офферов</button>
 
   </section>
 
