--- a/src/app/pages/offer-page/offer-page.component.html
+++ b/src/app/pages/offer-page/offer-page.component.html
@@ -8,7 +8,7 @@
 
     <div class="offer-meta-data">
       <span><strong>Тип объявления:</strong> {{getOfferTypeTitle()}}</span>
-      <span><strong>Сферы бизнеса:</strong> {{getOfferBusinessAreas()}}</span>
+      <span><strong>Сферы бизнеса:</strong> {{getOfferBusinessArea()}}</span>
       <span><strong>Дата публикации:</strong> {{getOfferDate()}}</span>
     </div>
 
