--- a/src/app/dialogs/login/login.component.html
+++ b/src/app/dialogs/login/login.component.html
@@ -1,9 +1,9 @@
 <h1 mat-dialog-title class="">Вход</h1>
 <div mat-dialog-content [formGroup]="loginFormGroup">
   <mat-form-field appearance="legacy">
-    <mat-label>Логин</mat-label>
+    <mat-label>E-mail</mat-label>
     <input matInput formControlName="login">
-    <mat-hint>E-mail или номер телефона</mat-hint>
+    <mat-hint></mat-hint>
   </mat-form-field>
 
   <mat-form-field appearance="legacy">
@@ -11,15 +11,15 @@
     <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password">
     <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Скрыть пароль'"
             [attr.aria-pressed]="hidePassword">
-      <img src="../../../assets/img/visibility_eye.svg" [style.opacity]="hidePassword ? .3 : 1" />
+      <img src="/assets/img/visibility_eye.svg" [style.opacity]="hidePassword ? .3 : 1" />
     </button>
   </mat-form-field>
 </div>
 <div mat-dialog-actions class="auth-social-media">
   <button mat-button color="primary" (click)="loginGoogle()">
-    <img src="../../../assets/img/google_logo.svg" alt="Логотип Google" /></button>
+    <img src="/assets/img/google_logo.svg" alt="Логотип Google" /></button>
   <button mat-button color="primary" (click)="loginFacebook()">
-    <img src="../../../assets/img/facebook_logo.svg" alt="Логотип Facebook" /></button>
+    <img src="/assets/img/facebook_logo.svg" alt="Логотип Facebook" /></button>
 </div>
 <div mat-dialog-actions class="full-width-action-buttons">
   <button mat-raised-button color="primary" [mat-dialog-close] (click)="logIn()">Войти</button>
