--- a/src/app/template-blocks/footer/footer.component.html
+++ b/src/app/template-blocks/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
 
   <div class="footer-container">
-    <img src="../../../assets/img/logo_footer.svg" alt="Логотип подвала" />
+    <img src="/assets/img/logo_footer.svg" alt="Логотип подвала" />
 
     <div class="footer-info">
       <p>Служба поддержки: <strong>info@bizmate.ru</strong></p>
