--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-$main-theme-color: "#673ab7";
+$main-theme-color: #673ab7;
 
 html, body {
   height: 100%;
@@ -21,26 +21,6 @@ main {
 
 *:focus {
   outline: 0;
-}
-
-.new-offer-form {
-  display: grid;
-  grid-template: auto / 1fr 1fr;
-  grid-gap: 1em 2em;
-
-  .full-width-field {
-    grid-column: 1 / 3;
-  }
-
-  .clear-form-btn {
-    align-self: center;
-    justify-self: end;
-  }
-
-  textarea {
-    min-height: 100px;
-    overflow: hidden !important;
-  }
 }
 
 .dialog-content {
