--- a/src/app/dialogs/sign-up/sign-up.component.html
+++ b/src/app/dialogs/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title class="">Регистрация</h1>
+<h1 mat-dialog-title>Регистрация</h1>
 <div mat-dialog-content [formGroup]="signUpFormGroup">
   <mat-form-field appearance="legacy">
     <mat-label>Имя</mat-label>
