--- a/src/app/pages/offer-form/offer-form.component.html
+++ b/src/app/pages/offer-form/offer-form.component.html
@@ -19,11 +19,6 @@
       </button>
 
       <mat-form-field>
-        <mat-label>Имя</mat-label>
-        <input matInput formControlName="name">
-      </mat-form-field>
-
-      <mat-form-field>
         <input type="text" placeholder="Населенный пункт" aria-label="Населенный пункт" matInput
                formControlName="city" [matAutocomplete]="cities">
         <mat-autocomplete #cities="matAutocomplete">
@@ -72,15 +67,10 @@
 
       <h4 class="full-width-field">Контактная информация</h4>
 
-      <mat-form-field>
-        <mat-label>Телефон</mat-label>
-        <input matInput formControlName="phone">
-      </mat-form-field>
-
-      <mat-form-field>
-        <mat-label>E-mail</mat-label>
-        <input matInput formControlName="email">
-      </mat-form-field>
+      <mat-checkbox [disabled]="!contactDataState.email.enabled" (change)="contactDataState.email.insert = !contactDataState.email.insert"
+                    [checked]="contactDataState.email.insert">&nbsp;Указать E-mail в объявлении</mat-checkbox>
+      <mat-checkbox [disabled]="!contactDataState.phone.enabled" (change)="contactDataState.phone.insert = !contactDataState.phone.insert"
+                    [checked]="contactDataState.phone.insert">&nbsp;Указать номер телефона в объявлении</mat-checkbox>
 
       <button mat-raised-button color="primary" (click)="sendOffer()">{{editOffer ? 'Сохранить' : 'Отправить'}}</button>
 
