--- a/src/app/dialogs/reset-password/reset-password.component.html
+++ b/src/app/dialogs/reset-password/reset-password.component.html
@@ -1,5 +1,8 @@
-<h1 mat-dialog-title>Сброс пароля</h1>
-<div mat-dialog-content>
+<h1 mat-dialog-title>Смена пароля</h1>
+
+<p class="error-message" *ngIf="errorMessage">{{errorMessage}}</p>
+
+<div *ngIf="!emailSent" mat-dialog-content>
   <p>Введите E-mail, по которому Вы регистрировались. На указанный адрес будет выслана ссыока для сброса пароля.</p>
   <mat-form-field appearance="legacy">
     <mat-label>E-mail</mat-label>
@@ -7,6 +10,13 @@
   </mat-form-field>
 </div>
 
+<div *ngIf="emailSent" mat-dialog-content>
+  <p>На указанный Вам адрес электронной почты, <strong>{{emailControl.value}}</strong>, было отправлено письмо с ссылкой для
+    смены пароля.</p>
+  <p>Перейдя по ссылке, Вы сможете установить новый пароль для аккаунта и войти в личный кабинет.</p>
+</div>
+
 <div mat-dialog-actions class="full-width-action-buttons">
-  <button mat-raised-button color="primary" [mat-dialog-close] (click)="sendEmailAndResetPassword()">Отправить сслыку</button>
+  <button *ngIf="!emailSent" mat-raised-button color="primary" (click)="sendEmailAndResetPassword()">Отправить сслыку</button>
+  <button *ngIf="emailSent" mat-button [mat-dialog-close]>Понятно</button>
 </div>
