--- a/src/app/pages/offer-form/offer-form.component.scss
+++ b/src/app/pages/offer-form/offer-form.component.scss
@@ -39,3 +39,20 @@ $main-theme-color: #673ab7;
     overflow: hidden !important;
   }
 }
+
+mat-checkbox {
+  margin-bottom: 1em;
+}
+
+.bottom-block {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+
+  p {
+    margin-bottom: 2em;
+    margin-top: 0;
+  }
+}
