--- a/src/app/template-blocks/footer/footer.component.scss
+++ b/src/app/template-blocks/footer/footer.component.scss
@@ -1,24 +1,59 @@
 footer {
   width: 100%;
-  background-color: #efefef;
+  background-color: #00303F;
+
+  .scroll-up-arrow {
+    width: 100%;
+    height: 19px;
+    padding: 1em 0 2em;
+    text-align: center;
+
+    img {
+      width: 32px;
+      height: 19px;
+      cursor: pointer;
+    }
+  }
 
   .footer-container {
     max-width: 1190px;
     width: 80%;
     height: 100px;
     margin: auto;
+    padding-bottom: 2em;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    img {
-      height: 60%;
+    div {
+      height: 90px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
-    .footer-info p {
-      font-size: 12px;
-      color: #6b6b6b;
-      text-align: right;
+    .footer_logo_and_copyright{
+      align-items: flex-start;
+
+      img {
+        height: 40px;
+      }
+
+      p {
+        font-size: 14px;
+        color: #fff;
+        opacity: .7;
+      }
+    }
+
+
+    .email_and_offer_button {
+      align-items: flex-end;
+
+      p {
+        font-size: 14px;
+        color: #fff;
+      }
     }
   }
 }
