--- a/src/app/template-blocks/header/header.component.html
+++ b/src/app/template-blocks/header/header.component.html
@@ -1,28 +1,16 @@
-<header>
-
-  <div class="top-bar">
-    <ul>
-      <li>Правила</li>
-      <li>Помощь</li>
-      <li>Частые вопросы</li>
-      <li>Контакты</li>
-    </ul>
-  </div>
-
+<header id="header">
   <nav>
-    <div class="logo-text-block" routerLink="/">
-      <img src="/assets/img/logo.svg" alt="BizMate логотип"/>
+    <div class="logo-block">
+      <img src="/assets/img/logo_header.svg" alt="BizMate логотип" [routerLink]="['/']" />
     </div>
 
 
     <div class="header-buttons">
-      <button mat-stroked-button color="primary" [routerLink]="['/new-offer']">
-        Разместить предложение
+      <button *ngIf="!loggedIn" class="button-primary login-button" (click)="openLoginDialog()">Вход
+        <img src="/assets/img/login_thumb.svg" alt="Войти" />
       </button>
-
-      <button *ngIf="!loggedIn" mat-button color="primary" (click)="openLoginDialog()">{{authControlText}}</button>
       <div *ngIf="loggedIn">
-        <button mat-mini-fab color="primary" (click)="visibleMenu = !visibleMenu">{{authControlText}}</button>
+        <button class="button-primary button-circle" (click)="visibleMenu = !visibleMenu">{{authControlText}}</button>
         <ul class="header-menu" (mouseleave)="visibleMenu = false" [style.display]="visibleMenu ? 'flex' : 'none'">
           <li (click)="openProfile()">Личный кабинет</li>
           <li>Помощь</li>
