--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,16 +1,89 @@
+.top-block {
+  width: 100%;
+  margin-top: 5em;
+  display: flex;
+  justify-content: space-between;
+
+  .text {
+    width: 65%;
+    min-width: 350px;
+    max-width: 650px;
+
+    p:nth-of-type(1) {
+      font-family: 'Raleway-Light';
+      font-size: 13px;
+      margin: 1em 0 0;
+      line-height: 15px;
+      color: #2E7990;
+    }
+
+    h1 {
+      font-family: Raleway-SemiBold;
+      font-size: 63px;
+      line-height: 75px;
+      color: #2E7990;
+      margin: 0;
+    }
+
+    p:nth-of-type(2) {
+      font-size: 14px;
+      width: 50%;
+      min-width: 350px;
+      line-height: 23px;
+      color: #2E7990;
+      margin-bottom: 2em;
+    }
+  }
+
+  .image-block {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background-image: url('/assets/img/home_page_img_@2.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top right;
+    z-index: -1;
+  }
+}
+
 .search-form-panel{
-  display: grid;
-  grid-template: auto / 1fr 1fr 100px;
-  grid-gap: 0 1em;
+  margin: 4em auto 3em;
+  width: calc(80% - 4em);
+  min-width: calc(350px - 4em);
+  background: #FCFFFF;
+  padding: 1.5em 2em;
+  box-shadow: inset -4px -4px 10px rgba(228, 246, 255, 0.5), inset 4px 4px 10px #FCFFFF, inset -4px 4px 10px rgba(228, 246, 255, 0.5), inset 4px -4px 10px rgba(228, 246, 255, 0.5), inset -1px 4px 10px rgba(228, 246, 255, 0.5);
+  border-radius: 5px;
+  border: 1px solid rgba(228, 246, 255, 0.8);
 
-  mat-form-field:nth-of-type(1) {
-    grid-column: 1/3;
+  h3 {
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Raleway-SemiBold';
   }
 
-  button {
-    align-self: center;
-  }
+  form {
+    display: grid;
+    grid-template: auto / 1fr 1fr;
+    grid-gap: 0 1em;
 
+    mat-form-field:nth-of-type(1) {
+      grid-column: 1/3;
+    }
+
+    & > div {
+      grid-column-start: 2;
+      display: flex;
+      justify-content: space-between;
+
+      button {
+        width: 40%;
+      }
+    }
+  }
 }
 
 .title {
