--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -86,24 +86,14 @@
   }
 }
 
-.title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 
-  img {
-    width: 24px;
-  }
+.offers-block{
 
-}
-
-.offers-list{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-
-  app-offer-card {
-    display: flex;
+  .more-offers{
+    display: table;
+    font-size: 16px;
+    margin: 2.5em auto 4em;
   }
 }
+
 
