--- a/src/app/template-blocks/offer-card/offer-card.component.scss
+++ b/src/app/template-blocks/offer-card/offer-card.component.scss
@@ -1,40 +1,90 @@
-mat-card {
-  width: 100%;
+.offer-card-container {
+  width: calc(100% - 2em);
+  height: calc(100% - 2em);
+  padding: 1em;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  min-width: 210px;
-  margin-bottom: 1.25em;
-  box-sizing: border-box;
+  border: 0.5px solid rgba(53, 166, 202, 0.41);
+  box-shadow: inset -4px -4px 10px rgba(228, 246, 255, 0.2), inset 4px 4px 10px #FCFFFF, inset -4px 4px 10px rgba(228, 246, 255, 0.25), inset 4px -4px 10px #E4F6FF, inset -1px 4px 10px #E4F6FF, inset 1px -4px 10px #FCFFFF;
+  border-radius: 5px;
 
-  mat-card-header {
+  .offer-card-header {
     position: relative;
+    display: flex;
+    justify-content: space-between;
 
-    .mat-card-avatar img{
-      max-width: 40px;
-      max-height: 40px;
+    .avatar{
+      position: absolute;
+      top: -35px;
+      left: 20px;
+      width: 80px;
+      height: 80px;
+      display: flex;
       border-radius: 50%;
+      background-color: #fff;
+      border: 0.5px solid rgba(53, 166, 202, 0.41);
+
+      img {
+        width: 60px;
+        height: 60px;
+        margin: auto;
+        border-radius: 50%;
+      }
+    }
+
+    .title-and-author{
+      margin-left: 7em;
+      height: 85px;
+
+      h3{
+        margin: 1em 0 0;
+        max-height: 44px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      span {
+        font-family: "Raleway-Light";
+        font-size: 14px;
+        line-height: 17px;
+      }
+    }
+
+    .date {
+      span {
+        color: rgba(46, 121, 144, 0.6);
+        font-family: "Raleway-Light";
+        font-size: 14px;
+        line-height: 17px;
+      }
+    }
+  }
+
+  .offer-card-desc{
+    width: calc(100% - 50px - 2em);
+    padding-left: 50px;
+    padding-right: 2em;
+    margin: 0 auto 1.5em;
+
+    p {
+      font-size: 14px;
+      line-height: 22px;
+    }
+  }
+
+  .offer-card-footer{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+
+    & > a {
+      margin-left: 1em;
     }
 
     .edit-btn {
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 20px;
+      width: 17px;
       cursor: pointer;
-    }
-
-  }
-
-
-  mat-card-actions {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-
-    span {
-      font-size: 12px;
-      color: rgba(0,0,0,.54);
     }
   }
 }
