some separate classes created & profile page completed

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -12,7 +12,7 @@
     </div>
   </div>
 
-  <div class="search-form-panel">
+  <div class="highlight-box search-form-panel">
     <h3>Поиск офферов</h3>
     <form [formGroup]="searchForm">
       <mat-form-field>
