--- a/src/app/pages/profile-page/profile-page.component.scss
+++ b/src/app/pages/profile-page/profile-page.component.scss
@@ -5,14 +5,18 @@ h2 {
   color: $main-theme-color;
 }
 
-#user-info {
-  width: 100%;
+.user-info-block {
   display: grid;
   grid-template: auto / 1fr 1fr;
   grid-gap: 1.5em 10vw;
+  margin: 4em auto;
+  position: relative;
 
   h2 {
     grid-column: 1/3;
+    text-align: center;
+    font-size: 29px;
+    font-family: 'Raleway-SemiBold';
   }
 
   & > div {
@@ -32,7 +36,18 @@ h2 {
 
   }
 
-  .name-and-thumb {
+  .avatar-container{
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    transform: translate(-50%, 0);
+
+    img {
+      cursor: pointer;
+    }
+  }
+
+  .name {
 
     & > div {
       width: $field-width-minus-edit;
@@ -41,14 +56,6 @@ h2 {
       mat-form-field {
         width: calc(100% - 40px - 1.25em);
       }
-    }
-
-    img.user-photo {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      cursor: pointer;
-      margin-right: 1.25em;
     }
   }
 }
