--- a/src/app/template-blocks/offer-card/offer-card.component.html
+++ b/src/app/template-blocks/offer-card/offer-card.component.html
@@ -3,7 +3,7 @@
 
 
     <div class="offer-card-header">
-      <div class="avatar">
+      <div class="avatar-container">
         <img [src]="offer.photoURL" alt="Аватар"/>
       </div>
 
