--- a/src/app/template-blocks/offer-card/offer-card.component.scss
+++ b/src/app/template-blocks/offer-card/offer-card.component.scss
@@ -14,23 +14,10 @@
     display: flex;
     justify-content: space-between;
 
-    .avatar{
+    .avatar-container{
       position: absolute;
       top: -35px;
       left: 20px;
-      width: 80px;
-      height: 80px;
-      display: flex;
-      border-radius: 50%;
-      background-color: #fff;
-      border: 0.5px solid rgba(53, 166, 202, 0.41);
-
-      img {
-        width: 60px;
-        height: 60px;
-        margin: auto;
-        border-radius: 50%;
-      }
     }
 
     .title-and-author{
