--- a/src/styles.scss
+++ b/src/styles.scss
@@ -208,9 +208,35 @@ input.mat-input-element{
   }
 }
 
+.highlight-box {
+  background: #FCFFFF;
+  width: calc(80% - 6em);
+  min-width: calc(350px - 6em);
+  padding: 1.5em 3em;
+  box-shadow: inset -4px -4px 10px rgba(228, 246, 255, 0.5), inset 4px 4px 10px #FCFFFF, inset -4px 4px 10px rgba(228, 246, 255, 0.5), inset 4px -4px 10px rgba(228, 246, 255, 0.5), inset -1px 4px 10px rgba(228, 246, 255, 0.5);
+  border-radius: 5px;
+  border: 1px solid rgba(228, 246, 255, 0.8);
+}
+
 .offers-list{
   margin-top: 3em;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-gap: 2em;
+}
+
+.avatar-container {
+  width: 80px;
+  height: 80px;
+  display: flex;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 0.5px solid rgba(53, 166, 202, 0.41);
+
+  img {
+    width: 60px;
+    height: 60px;
+    margin: auto;
+    border-radius: 50%;
+  }
 }
