dialog windows layout resolved

--- a/src/app/dialogs/email-verify-message/email-verify.component.html
+++ b/src/app/dialogs/email-verify-message/email-verify.component.html
@@ -4,5 +4,5 @@
   <p>Нажав на нее, Вы завершите процесс регистраиции и сможете разместить свой первый оффер!</p>
 </div>
 <div mat-dialog-actions class="full-width-action-buttons">
-  <button mat-button [mat-dialog-close]>Понятно</button>
+  <button class="button-primary" [mat-dialog-close]>Понятно</button>
 </div>
