--- a/src/app/dialogs/login/login.component.html
+++ b/src/app/dialogs/login/login.component.html
@@ -2,6 +2,9 @@
 
 <p class="error-message" *ngIf="errorMessage">{{errorMessage}}</p>
 
+<a class="link" (click)="loginGoogle()">Вход через&nbsp;&nbsp;
+  <img src="/assets/img/google_logo.svg" alt="Google"></a>
+
 <div mat-dialog-content [formGroup]="loginFormGroup">
   <mat-form-field appearance="legacy">
     <mat-label>E-mail</mat-label>
@@ -18,14 +21,9 @@
     </button>
   </mat-form-field>
 </div>
-<div mat-dialog-actions class="auth-social-media">
-  <button mat-button color="primary" (click)="loginGoogle()">Вход через
-    <img src="/assets/img/google_logo.svg" alt="Логотип Google" /></button>
-  <!--<button mat-button color="primary" (click)="loginFacebook()">
-    <img src="/assets/img/facebook_logo.svg" alt="Логотип Facebook" /></button>-->
-</div>
+
 <div mat-dialog-actions class="full-width-action-buttons">
-  <button mat-raised-button color="primary" (click)="logIn()">Войти</button>
-  <button mat-button color="primary" [mat-dialog-close] (click)="signUp()">Зарегистрироваться</button>
-  <button mat-button [mat-dialog-close] (click)="forgotPassword()">Забыл пароль</button>
+  <a class="link" [mat-dialog-close] (click)="forgotPassword()">Забыл пароль</a>
+  <button class="button-primary" (click)="logIn()">Войти</button>
+  <button class="button-primary button-white" [mat-dialog-close] (click)="signUp()">Зарегистрироваться</button>
 </div>
