--- a/src/app/dialogs/sign-up/sign-up.component.html
+++ b/src/app/dialogs/sign-up/sign-up.component.html
@@ -26,5 +26,6 @@
 </div>
 
 <div mat-dialog-actions class="full-width-action-buttons">
-  <button mat-raised-button color="primary" (click)="signUp()">Зарегистрироваться</button>
+  <button class="button-primary" (click)="signUp()">Зарегистрироваться</button>
+  <button class="button-primary button-white" (click)="logIn()">Войти</button>
 </div>
