--- a/src/app/dialogs/notification/notification.component.html
+++ b/src/app/dialogs/notification/notification.component.html
@@ -3,5 +3,5 @@
   {{data.text}}
 </div>
 <div mat-dialog-actions class="full-width-action-buttons">
-  <button mat-raised-button color="primary" [mat-dialog-close]>Понятно</button>
+  <button class="button-primary" [mat-dialog-close]>Понятно</button>
 </div>
