--- a/src/app/dialogs/reset-password/reset-password.component.html
+++ b/src/app/dialogs/reset-password/reset-password.component.html
@@ -2,7 +2,7 @@
 
 <p class="error-message" *ngIf="errorMessage">{{errorMessage}}</p>
 
-<div *ngIf="!emailSent" mat-dialog-content>
+<div *ngIf="!emailSent" mat-dialog-content class="initial-content">
   <p>Введите E-mail, по которому Вы регистрировались. На указанный адрес будет выслана ссыока для сброса пароля.</p>
   <mat-form-field appearance="legacy">
     <mat-label>E-mail</mat-label>
@@ -17,6 +17,6 @@
 </div>
 
 <div mat-dialog-actions class="full-width-action-buttons">
-  <button *ngIf="!emailSent" mat-raised-button color="primary" (click)="sendEmailAndResetPassword()">Отправить сслыку</button>
-  <button *ngIf="emailSent" mat-button [mat-dialog-close]>Понятно</button>
+  <button *ngIf="!emailSent"class="button-primary" (click)="sendEmailAndResetPassword()">Отправить сслыку</button>
+  <button *ngIf="emailSent" class="button-primary button-transparent" [mat-dialog-close]>Понятно</button>
 </div>
