--- a/src/app/template-blocks/header/header.component.scss
+++ b/src/app/template-blocks/header/header.component.scss
@@ -31,6 +31,7 @@ header {
         width: 14px;
         height: 14px;
         margin-left: .25em;
+        margin-top: -5px;
         vertical-align: middle;
       }
 
