--- a/src/styles.scss
+++ b/src/styles.scss
@@ -156,12 +156,24 @@ input.mat-input-element{
   color: #d70108;
 }
 
+.dialog-backdrop {
+  background-color: rgba(46, 121, 144, 0.5);
+}
+
 .dialog-content {
   text-align: center;
 
   h1 {
     text-align: center;
     color: $main-theme-color;
+    margin-bottom: 0;
+  }
+
+  .link{
+    font-size: 12px;
+    display: block;
+    margin: 1.5em auto;
+    cursor: pointer;
   }
 
   .mat-dialog-content {
@@ -170,20 +182,20 @@ input.mat-input-element{
   }
 
   mat-form-field,
-  .full-width-action-buttons,
-  .auth-social-media {
+  .full-width-action-buttons {
     display: flex;
     width: 80%;
     max-width: 450px;
-    margin: 1em auto 0;
   }
 
   mat-form-field {
     flex-direction: column;
+    margin: 1em auto 0;
   }
 
   .full-width-action-buttons {
     flex-direction: column;
+    margin: 0 auto;
 
     button {
       width: 100%;
@@ -191,19 +203,6 @@ input.mat-input-element{
 
     button:not(:last-child) {
       margin-bottom: .75em;
-    }
-  }
-
-  .auth-social-media {
-    button {
-      flex: 0 100%;
-      height: 48px;
-      font-size: 18px;
-
-      img {
-        width: 22px;
-        vertical-align: sub;
-      }
     }
   }
 }
